del: 删除了目标类中的priority字段，后续可以在插件中使用约束实现
